apply plugin: 'eclipse'
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'docker'
apply plugin: 'maven'
apply plugin: 'com.gorylenko.gradle-git-properties'

group = 'com.rfsc.cloud.config'
version = '1.0.0'


buildscript {
	ext {
		springBootVersion = '2.0.0.RC1'
	}
	repositories {
		mavenLocal()
		mavenCentral()
		maven { url "https://repo.spring.io/snapshot" }
		maven { url "https://repo.spring.io/milestone" }
        maven { url "https://plugins.gradle.org/m2/" }
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
		classpath("io.spring.gradle:dependency-management-plugin:0.5.1.RELEASE")
		classpath('se.transmode.gradle:gradle-docker:1.2')
        // Genera informacion de git para endpoint info
        classpath 'gradle.plugin.com.gorylenko.gradle-git-properties:gradle-git-properties:1.4.20'
	}
}


jar {
	baseName = 'rfsc-cloud-config-server'
	version = version
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
	mavenLocal()
	mavenCentral()
	maven { url "https://repo.spring.io/snapshot" }
	maven { url "https://repo.spring.io/milestone" }
}


dependencies {

    compile('org.springframework.boot:spring-boot-starter-security')
    compile('org.springframework.boot:spring-boot-starter-actuator')
	compile('org.springframework.cloud:spring-cloud-config-server')
	testCompile('org.springframework.boot:spring-boot-starter-test')
  	compile('ch.qos.logback:logback-core:1.1.8')
	compile('net.logstash.logback:logstash-logback-encoder:4.11')
    compileOnly ('org.projectlombok:lombok')
}

compileJava.dependsOn(processResources)

ext {
	springCloudVersion = 'Finchley.M5'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

docker {
	baseImage("java:8")
	maintainer("Redbee")
}

// Genera informacion del build para endpoint info
springBoot {
    buildInfo()
}

task wrapper(type: Wrapper) {
	gradleVersion = '4.2.1'
}

if (!project.hasProperty("dockerTag")) {
    ext.dockerTag = "latest"
}
//START Build docker image
task buildDocker(type: Docker, dependsOn: build) {
	baseImage = "anapsix/alpine-java:8_server-jre_unlimited"
	maintainer = "RFSC"
	hostUrl = "https://docker.dev.redbee.io"
	push = true
	dryRun = false
	tagVersion = "${dockerTag}"
	tag = "docker.dev.redbee.io/${jar.baseName}"
	addFile {
		from jar
		rename { "${jar.baseName}.jar"}
	}

	entryPoint(
			[
					"java",
					"-Djava.security.egd=file:/dev/./urandom",
					"-Dcom.sun.management.jmxremote",
                    "-Dcom.sun.management.jmxremote.authenticate=false",
                    "-Dcom.sun.management.jmxremote.ssl=false",
                    "-Dcom.sun.management.jmxremote.local.only=false",
                    "-Dcom.sun.management.jmxremote.port=1099",
                    "-Dcom.sun.management.jmxremote.rmi.port=1099",
                    "-Djava.rmi.server.hostname=127.0.0.1",
                    "-XX:+UnlockExperimentalVMOptions",
                    "-XX:+UseCGroupMemoryLimitForHeap",
                    "-XX:MaxRAMFraction=1",
					"-jar",
					"/${jar.baseName}.jar"
			]
	)
}

bootRun {
	jvmArgs = ["-Djava.security.egd=file:/dev/./urandom", "-Dspring.profiles.active=local"]
}




